# dh-index-be

./: .env  .gitignore  Jenkinsfile  README.md  manage.py  pyproject.toml
deploy/: .dockerignore  Dockerfile  Dockerfile.simple  README.md  create_superuser.py  docker-compose.prod.yml  docker-compose.yml
dh_index/: asgi.py  settings.py  urls.py  wsgi.py
dh_index/apps/: urls_api.py
dh_index/apps/user/: apps.py  models.py  serializers.py  views.py
dh_index/apps/user/migrations/: 0001_initial.py  0002_userholdings.py  0003_userportfolio_userholdings_user_portfolio.py
dh_index/apps/user/model_container/: __init__.py  user.py  user_holdings.py  user_portfolio.py
dh_index/apps/user/routers/: register.py  user.py  user_holdings.py
dh_index/apps/user/serializers_container/: __init__.py  custom_token.py  register.py  user.py  user_holdings.py  user_portfolio.py
dh_index/apps/user/views_container/: __init__.py  register.py  user.py  user_holdings.py  user_portfolio.py
dh_index/apps/utils/: constant_status.py  dynamic_param.py  enum_type.py  send_mail.py
